--- a/Tema2/Biblioteca/package.json
+++ b/Tema2/Biblioteca/package.json
@@ -1,16 +1,16 @@
 {
   "name": "biblioteca",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node app.js",
+    "test": "mocha"
   },
   "dependencies": {
-    "express": "~4.16.0",
-    "mocha": "^5.2.0",
-    "morgan": "~1.9.0"
+    "express": "~4.16.0"
   },
   "devDependencies": {
+    "mocha": "^5.2.0",
     "supertest": "^3.3.0"
   }
 }
